Changed the SafeJsonParser connection error message.

The previous error message was too generic, making it harder to find the
culprit for the "Json error".

BUG=670625

Review-Url: https://codereview.chromium.org/2558613002
Cr-Commit-Position: refs/heads/master@{#437037}

Former-commit-id: 887e54f79784fa655609c00f3f03940a043f39a8